# Drift-aware-Real-time-Alpha-Monitoring-and-Adaptation-System

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: adaptation_config.yaml  alpha_config.yaml  monitoring_config.yaml  pipeline_config.yaml  risk_config.yaml
dashboards/: alpha_monitor.json  data_monitor.json  home.json  model_monitor.json  strategy_monitor.json
docs/: architecture.md  database_schema.md  glossary.md  grafana_setup.md
memory/: MEMORY.md  feedback_language.md  feedback_read_local.md  feedback_test_scope.md  feedback_venv_acl.md  feedback_wq101_float_windows.md  project_model_pool_phase_b1.md  project_python_wq101_migration.md  project_tej_is_alpha_selection.md  project_wp9_cost_aware_redesign_20260504.md  project_wp9_finding.md  project_wp9_horizon_aligned_experiment_20260505.md  project_wp9_signal_diagnostics_20260505.md  project_wp9_tej_baseline_20260504.md  project_yfinance_8476_artifact.md  project_yfinance_guardrails_20260504.md
migrations/: 001_init_tables.sql  002_phase_b3_regime_pool.sql
notebooks/: 01_alpha_ic_analysis.py  02_drift_detection_experiment.py  03_adaptation_evaluation.py
pipelines/: ab_experiment.py  adaptation_pipeline.py  daily_batch_pipeline.py  label_update_pipeline.py  monitoring_pipeline.py  predict_next_day.py  replay_pipeline.py  simulate_recent.py
scripts/: backfill_alpha.py  demo_monitoring_2026.py  download_tw_stocks.py  export_results.py  generate_report.py  ingest_csv_to_dolphindb.py  ingest_tej_csv.py  run_is_oos_validation.py  seed_security_master.py  (+2 more)
(+129 files in other folders)
